more link changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row" style="padding:5vw;">
 
             <div class="col-1">
-                <nav class="navbar navbar-light" >
+                <nav class="navbar" >
 
                     <div class="navbar-nav  mx-auto">
                         <a href="#" class="navbar-text nav-item nav-link">Home</a>
