--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                 </nav>
             </div>
 
+            <div class="col-1">
+            </div>
 
-
-            <div class="col-11">
+            <div class="col-10">
                 <div class="container mt-1 mx-auto " style="width:70vw; padding:10px;">
                     <div class="mb-0" style="overflow: hidden; ">
 
