--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                             <p class="para-text lead">Software Developer</p>
                     </div><br>
 
-                    
+                    <hr>
                     <div class="para-text row">
-                        <a class="col-lg-4 col-md-4 col-sm-6 col-xs-6" href="https://www.linkedin.com/in/okeluskar" target="_blank"><i class="fa fa-linkedin-square">&nbsp;LinkedIn</i></a>
+                        <a class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-5" href="https://www.linkedin.com/in/okeluskar" target="_blank"><i class="fa fa-linkedin-square">&nbsp;LinkedIn</i></a>
 
-                        <a class="col-lg-4 col-md-4 col-sm-6 col-xs-6" href="https://www.github.com/orkeluskar" target="_blank"><i class="fa fa-github-square">&nbsp;GitHub</i></a>
+                        <a class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-5" href="https://www.github.com/orkeluskar" target="_blank"><i class="fa fa-github-square">&nbsp;GitHub</i></a>
 
-                        <a class="col-lg-4 col-md-4 col-sm-6 col-xs-6" href="mailto:ork216@nyu.edu" target="_blank"><i class="fa fa-envelope-o">&nbsp;Email</i></a>
+                        <a class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-5" href="mailto:ork216@nyu.edu" target="_blank"><i class="fa fa-envelope-o">&nbsp;Email</i></a>
                     </div>
 
                     <hr>
