--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
         
         <div class="row" style="padding:5vw;">
 
-            <div class="col-2">
+            <div class="col-sm-2">
                 <nav class="navbar navbar-light" >
 
-                <button class="btn-success navbar-toggler navbar-toggler-right" type="button" 
+                <div class="mx-auto">
+                	<button class="navbar-toggler navbar-toggler-right" type="button" 
 				    data-toggle="collapse" data-target="#myContent1" >
 				    <span class=" navbar-toggler-icon"></span>
 				  </button>
-
-
+                </div>
+ 
                 	<div class="collapse navbar-collapse" id="myContent1">
 	                    <div class="navbar-nav  mx-auto">
+	                    	<br><br>
 	                        <a href="#" class="navbar-text nav-item nav-link">Home</a>
 	                        <a href="#" class="navbar-text nav-item nav-link">Projects</a>
 	                        <a href="#" class="navbar-text nav-item nav-link">Education</a>
@@ -76,7 +78,7 @@
                 <div class="container mt-1 mx-auto " style="width:60vw; padding:10px;">
                     <div class="mb-0" style="overflow: hidden; ">
 
-                        <img src = "images/profile.jpg" class=" img-fluid rounded-circle  d-block" height="120" width="120" style="margin-right: 20px; float: left;">
+                        <img src = "images/profile.jpg" class=" img-fluid rounded-circle  d-block" style="height:9vmax; width:9vmax; margin-right: 20px; float: left;">
                         <p class="h1-text ">Omkar Keluskar</p>
                             <p class="para-text lead">Software Developer</p>
                     </div><br>
