--- a/edu.html
+++ b/edu.html
@@ -80,13 +80,18 @@
                             <dl class="row" style="color:purple;">
                                   <dt class="col-sm-5">Major: </dt>
                                   <dd class="col-sm-7">Computer Science</dd>
+                                  <dd class="col-sm-7 offset-sm-5"></dd>
 
+
+                                  <br>
                                   <dt class="col-sm-5">Relevant Course-work:</dt>
                                   <dd class="col-sm-7">Principles of Database Systems</dd>
                                   <dd class="col-sm-7 offset-sm-5">Computer Architecture</dd>
                                   <dd class="col-sm-7 offset-sm-5">Introduction to Data Science</dd>
                                   <dd class="col-sm-7 offset-sm-5">Network Security</dd>
+                                  <dd class="col-sm-7 offset-sm-5"></dd>
 
+                                  <br>
                                   <dt class="col-sm-5">Graduation:</dt>
                                   <dd class="col-sm-7">June 2018</dd>
 
@@ -108,13 +113,18 @@
                              <dl class="row text-success" >
                                   <dt class="col-sm-5">Major: </dt>
                                   <dd class="col-sm-7">Information Technology</dd>
+                                  <dd class="col-sm-7 offset-sm-5"></dd>
 
+
+                                  <br>
                                   <dt class="col-sm-5">Relevant Course-work:</dt>
                                   <dd class="col-sm-7">Artificial Intelligence</dd>
                                   <dd class="col-sm-7 offset-sm-5">Data Mining & Business Intelligence</dd>
                                   <dd class="col-sm-7 offset-sm-5">Information Security</dd>
                                   <dd class="col-sm-7 offset-sm-5">Computer Simulation & Modeling</dd>
+                                  <dd class="col-sm-7 offset-sm-5"></dd>
 
+                                  <br>
                                   <dt class="col-sm-5">Graduation:</dt>
                                   <dd class="col-sm-7">August 2016</dd>
 
