--- a/edu.html
+++ b/edu.html
@@ -77,7 +77,7 @@
                     <div class="para-text collapse" id="nyu">
                         <p class=" para-text  lead">
 
-                            <dl class="row" style="color:purple;">
+                            <dl class="row">
                                   <dt class="col-sm-5">Major: </dt>
                                   <dd class="col-sm-7">Computer Science</dd>
                                   <dd class="col-sm-7 offset-sm-5"></dd>
@@ -103,14 +103,14 @@
                         </p>
                     </div>
                     
-                    <p  class="h2-text text-success" data-toggle="collapse" data-target="#mu" >
+                    <p  class="h2-text" style="color:orange;" data-toggle="collapse" data-target="#mu" >
                     <i class="fa fa-graduation-cap">&nbsp;&nbsp;<span class="h3-text" style="font-family: Ubuntu;">Mumbai University</span></i>
                     </p>
                     <div class="collapse" id="mu">
-                        <p class=" para-text text-success lead" >
+                        <p class=" para-text lead" >
 
                                 
-                             <dl class="row text-success" >
+                             <dl class="row para-text" >
                                   <dt class="col-sm-5">Major: </dt>
                                   <dd class="col-sm-7">Information Technology</dd>
                                   <dd class="col-sm-7 offset-sm-5"></dd>
