--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	                    <div class=" navbar-nav">
 	                    	
 	                        <a href="#" class="navbar-text nav-item nav-link">Home</a>
-	                        <a href="#" class="navbar-text nav-item nav-link">Projects</a>
+	                        <a href="projects.html" class="navbar-text nav-item nav-link">Projects</a>
 	                        <a href="edu.html" class="navbar-text nav-item nav-link">Education</a>
 	                        <a href="#" class="navbar-text nav-item nav-link">About</a>
 	                    </div>
@@ -62,8 +62,8 @@
                     <div style="overflow: hidden; ">
 
                         <img src = "images/profile.jpg" class=" img-fluid rounded-circle  d-block">
-                        <p class="h2-text ">Omkar Keluskar</p>
-                            <p class="para-text lead">Software Developer</p>
+                        <p class="h3-text ">Omkar Keluskar</p>
+                        <span class="para-text">Software Engineer</span>
                     </div>
 
                     <hr>
