--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	                        <a href="#" class="navbar-text nav-item nav-link">Home</a>
 	                        <a href="projects.html" class="navbar-text nav-item nav-link">Projects</a>
                             <a href="edu.html" class="navbar-text nav-item nav-link">Education</a>
-                            <a href="../prep/index.html" class="navbar-text nav-item nav-link">Prep</a>
+                            <a href="../prep/firstUniqeChars/index.html" class="navbar-text nav-item nav-link">Prep</a>
 	                        
 	                    </div>
                     </div>
